--- a/admin/package.json
+++ b/admin/package.json
@@ -57,13 +57,13 @@
     "babel-preset-stage-2": "6.24.1",
     "chalk": "2.4.1",
     "copy-webpack-plugin": "4.5.2",
-    "cross-env": "5.2.0",
+    "cross-env": "^5.2.0",
     "css-loader": "1.0.0",
     "eslint": "4.19.1",
     "eslint-friendly-formatter": "4.0.1",
     "eslint-loader": "2.0.0",
-    "eslint-plugin-vue": "4.7.1",    
     "eslint-plugin-html": "^4.0.3",
+    "eslint-plugin-vue": "4.7.1",
     "file-loader": "1.1.11",
     "friendly-errors-webpack-plugin": "1.7.0",
     "hash-sum": "1.0.2",
