--- a/admin/package.json
+++ b/admin/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "litemall-admin",
+  "name": "TVcms-admin",
   "version": "0.1.0",
-  "description": "litemall-admin basing on vue-element-admin 3.9.3",
-  "author": "linlinjava <linlinjava@163.com>",
+  "description": "TVcms-admin basing on vue-element-admin 3.9.3/ itemall-admin",
+  "author": "ZhuYunlong <920200256@qq.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
