--- a/blog/package.json
+++ b/blog/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bianquan",
-  "description": "A Vue.js project",
+  "description": "A Vue.js blog project",
   "version": "1.0.0",
-  "author": "",
+  "author": "ZhuYunlong 920200256@qq.com",
   "license": "MIT",
   "private": true,
   "scripts": {
