切换redis，权限大修改

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 servers/runtime/*
 servers/public/static/*
 servers/public/uploads/*
+servers/application/log/*
 !servers/public/uploads/default
 servers/application/database.php
 servers/application/config.php
